force-app/main/default/objects/Google_Calendar__c/Google_Calendar__c.object-meta.xml
<CustomObject>
    <label>Google Calendar</label>
    <nameField>
        <displayFormat>GC-{000000}</displayFormat>
        <label>Google Calendar No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Google Calendar</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>