force-app/main/default/objects/Google_Calendar__c/fields/Calendar_Name__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Name__c</fullName>
    <label>Calendar Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>