force-app/main/default/objects/Google_Calendar__c/fields/Calendar_Type__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Type__c</fullName>
    <inlineHelpText>Shift Calendar - for Shifts of resource
Booking Calendar - for Booking Appointments</inlineHelpText>
    <label>Calendar Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shift Calendar</fullName>
            </value>
            <value>
                <fullName>Booking Calendar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>