force-app/main/default/objects/Google_Calendar__c/fields/Google_Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Calendar_Id__c</fullName>
    <externalId>true</externalId>
    <label>Google Calendar Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>