force-app/main/default/objects/Google_Calendar__c/fields/Last_Processed_SYSLog__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_SYSLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Processed SYSLog</label>
    <referenceTo>SYS_IntegrationLog__c</referenceTo>
    <relationshipLabel>Google Calendar</relationshipLabel>
    <relationshipName>Google_Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>