force-app/main/default/objects/Google_Calendar__c/fields/PMA_Product__c.field-meta.xml
<CustomField>
    <fullName>PMA_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PMA Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>Google_Calendars</relationshipName>
    <type>Lookup</type>
</CustomField>