force-app/main/default/objects/Google_Calendar__c/fields/Watch_Event_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Watch_Event_Expiry__c</fullName>
    <label>Watch Event Expiry</label>
    <type>DateTime</type>
</CustomField>