force-app/main/default/objects/Google_Calendar__c/fields/Watch_Event_Resource_URI__c.field-meta.xml
<CustomField>
    <fullName>Watch_Event_Resource_URI__c</fullName>
    <label>Watch Event Resource URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>