force-app/main/default/objects/Google_Calendar__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Calendar_Name__c</columns>
    <columns>PMA_Product__c</columns>
    <columns>TimeZone__c</columns>
    <columns>Watch_Event_Expiry__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>